...
        component={HomeStackScreen}
        options={{tabBarTestID: 'HomeTab'}}
      />
      <Tab.Screen
        name="Buy"
        component={BuyStackScreen}
        tabBarTestID="BuyTab"
        options={{tabBarTestID: 'BuyTab'}}
      />
      <Tab.Screen
        name="Crash"
        component={CrashStackScreen}
        tabBarTestID="CrashTab"
        options={{tabBarTestID: 'CrashTab'}}
      />
      <Tab.Screen
        name="Settings"
        component={SettingsStackScreen}
        tabBarTestID="SettingsTab"
        options={{tabBarTestID: 'SettingsTab'}}
      />
    </Tab.Navigator>
  );
}

...
